  chroot above.  The CWD will still include $HOME, but all accesses to
  files and paths outside of $HOME will be forbidden.

- Added support for the SITE CHMOD command in the twoftpd-xfer backend,
  as well as a framework for adding other SITE commands.

- Added code to show the true mode of files in long listings rather than
  just "-rw-r--r--" for files and "drwxr-xr-x" for directories.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.07

- Fixed a bug in handling listing unreadable directory entries that
  would cause listings to be prematurely terminated immediately before
  such an entry.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.06

- Fixed a one-off bug in doing pattern listings that caused all the
  resulting filenames to be prefixed with a '/'.

- Fixed some portability problems.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.05

- Rewrote all file handling operations to enable "emulated" chroot
  behavior.  There are now three modes of operation:
  1. Normal:  CWD appears as $HOME at login.
  2. Hard chroot:  CWD appears as / at login, and is enforced with a chroot.
  3. Emulated chroot:  CWD appears as / at login, with no chroot.
  In all of the cases, there is no chdir done after the server starts.
  This change was done to permit symlinks outside of $HOME.

- Improved the run files and the conf tools to run envdir on each
  connection rather than before tcpserver starts.  This allows the