@@ -24,6 +24,10 @@ the OS chroot syscall.
 .B GID
 Numerical group ID number to change to at program startup.
 .TP
+.B GROUP
+Group name to use in long listings.  If not set, defaults to
+.IR mygroup .
+.TP
 .B HOME
 Directory to switch to on program startup.
 .TP
